--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
   <head>
     <title>Todo App</title>
+    <link rel="stylesheet" type="text/css" href="./node_modules/onsenui/css/onsenui.css">
+    <link rel="stylesheet" type="text/css" href="./node_modules/onsenui/css/onsen-css-components.css">
   </head>
   <body>
     <div id="root"></div>
