--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
     <title>Todo App</title>
     <link rel="stylesheet" type="text/css" href="./node_modules/onsenui/css/onsenui.css">
     <link rel="stylesheet" type="text/css" href="./node_modules/onsenui/css/onsen-css-components.css">
+    <style>
+      #page2 .page__content {
+        bottom: 44px;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
