--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,10 @@
 <html>
   <head>
     <title>Todo App</title>
-    <link rel="stylesheet" type="text/css" href="./css/onsenui.css">
-    <link rel="stylesheet" type="text/css" href="./css/onsen-css-components.css">
-    <style>
-      #page1 .page__background {
-        background: white;
-      }
-
-      #page2 .page__content {
-        bottom: 44px;
-      }
-    </style>
+    <script>
+      document.location.href ="http://192.81.214.88:5000/Horizon-MobX-OnsenUI/build/index.html";
+    </script>
   </head>
   <body>
-    <div id="root"></div>
-    <script src="app.js"></script>
   </body>
 </html>
